// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`jira getCurrentUser should forward any unknown error 1`] = `
Object {
  "message": "Some error message",
}
`;

exports[`jira getCurrentUser should get the current user 1`] = `
Object {
  "accountId": "Olaf_Kuphal19",
  "displayName": "Nikko",
  "groups": Object {
    "items": Object {
      "name": "asda",
    },
  },
}
`;

exports[`jira getCurrentUser should have a default message if there is none 1`] = `
Object {
  "code": 404,
  "message": "Something went wrong when connecting with jira",
}
`;

exports[`jira getCurrentUser should map the jira errors 1`] = `
Object {
  "code": 404,
  "message": "There was an error",
}
`;

exports[`jira getIssue gets and transforms the issue from Jira 1`] = `
Object {
  "description": undefined,
  "id": 4266,
  "key": "FOTINGO-3004",
  "project": Object {
    "id": "soluta",
    "key": "qui",
  },
  "sanitizedSummary": "issue_with_a_lot_of_characters",
  "summary": "Issue with a lot of characters \\"$&'*,:;<>?@[]\`~‘’“”",
  "type": "Story",
  "url": "https://vallie.biz/browse/FOTINGO-3004",
}
`;
